--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 absl-py==1.4.0
 accelerate==1.9.0
 aiofiles==24.1.0
@@ -66,7 +67,6 @@ contourpy==1.3.2
 cramjam==2.10.0
 cryptography==43.0.3
 cuda-python==12.6.2.post1
-cudf-cu12 @ https://pypi.nvidia.com/cudf-cu12/cudf_cu12-25.6.0-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
 cudf-polars-cu12==25.6.0
 cufflinks==0.17.3
 cuml-cu12==25.6.0
@@ -173,7 +173,7 @@ google-pasta==0.2.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 googledrivedownloader==1.1.0
-gradio==5.38.2
+gradio==5.38.1
 gradio_client==1.11.0
 graphviz==0.21
 greenlet==3.2.3
@@ -204,7 +204,7 @@ httpcore==1.0.9
 httpimport==1.4.1
 httplib2==0.22.0
 httpx==0.28.1
-huggingface-hub==0.34.1
+huggingface-hub==0.33.5
 humanize==4.12.3
 hyperframe==6.1.0
 hyperopt==0.2.7
@@ -367,9 +367,9 @@ opencv-python-headless==4.12.0.88
 openpyxl==3.1.5
 opt_einsum==3.4.0
 optax==0.2.5
-optree==0.17.0
+optree==0.16.0
 orbax-checkpoint==0.11.19
-orjson==3.11.1
+orjson==3.11.0
 osqp==1.0.4
 packaging==25.0
 pandas==2.2.2
@@ -423,6 +423,7 @@ pycryptodomex==3.23.0
 pydantic==2.11.7
 pydantic_core==2.33.2
 pydata-google-auth==1.9.1
+pydeck==0.9.1
 pydot==3.0.4
 pydotplus==2.0.2
 PyDrive==1.3.1
@@ -519,7 +520,7 @@ soxr==0.5.0.post1
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-spanner-graph-notebook==1.1.6
+spanner-graph-notebook==1.1.7
 Sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
@@ -534,6 +535,7 @@ srsly==2.5.1
 stanio==0.5.1
 starlette==0.47.2
 statsmodels==0.14.5
+streamlit==1.47.1
 stringzilla==3.12.5
 stumpy==1.13.0
 sympy==1.13.1
@@ -581,7 +583,7 @@ tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.7.1
 traittypes==0.2.1
-transformers==4.54.0
+transformers==4.53.3
 treelite==4.4.1
 treescope==0.1.9
 triton==3.2.0
@@ -607,6 +609,7 @@ vega-datasets==0.9.0
 wadllib==1.3.6
 wandb==0.21.0
 wasabi==1.1.3
+watchdog==6.0.0
 wcwidth==0.2.13
 weasel==0.4.1
 webcolors==24.11.1
